before adding slicebox to the img_slider

--- a/flipkart.html
+++ b/flipkart.html
@@ -17,6 +17,10 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="Slicebox-master/css/custom.css"> -->
+    <!-- <link rel="stylesheet" href="Slicebox-master/css/demo.css"> -->
+    <!-- <link rel="stylesheet" href="Slicebox-master/css/slicebox.css"> -->
+    <!-- <script src="Slicebox-master/js/modernizr.custom.46884.js"></script> -->
     <link rel="stylesheet" href="css/utils.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
@@ -2859,6 +2863,8 @@ Telephone: <span id="telephone">1800 202 9898</span>
     </div>
     <!-- <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script> -->
     <!-- <script src="js/vanilla-tilt.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="Slicebox-master/js/jquery.slicebox.js"></script>
     <script src="js/script_1.js"></script>
 </body>
 
