button ripple effects fixed

--- a/flipkart.html
+++ b/flipkart.html
@@ -1384,7 +1384,8 @@
         <div class="slider_1">
             <div class="arrows">
                 <div id="left_arrow">
-                    <i class="uil uil-angle-left-b icon-slider_arrow" id="left_arrow_icon" onclick="event.stopPropagation();"></i>
+                    <i class="uil uil-angle-left-b icon-slider_arrow" id="left_arrow_icon"
+                        onclick="event.stopPropagation();"></i>
                 </div>
                 <div id="right_arrow">
                     <i class="uil uil-angle-right-b icon-slider_arrow" id="right_arrow_icon"></i>
@@ -1452,7 +1453,14 @@
                     <label id="manual_btn_4" for="radio_4" class="manual_btn ripple" onclick="checkChange(4);"></label>
                     <label id="manual_btn_5" for="radio_5" class="manual_btn ripple" onclick="checkChange(5);"></label>
                     <label id="manual_btn_6" for="radio_6" class="manual_btn ripple" onclick="checkChange(6);"></label>
-                    <div class="transparent_label_box"></div>
+                    <div class="transparent_label_box">
+                        <span class="ripple_span" id="manual_span_1"></span>
+                        <span class="ripple_span" id="manual_span_2"></span>
+                        <span class="ripple_span" id="manual_span_3"></span>
+                        <span class="ripple_span" id="manual_span_4"></span>
+                        <span class="ripple_span" id="manual_span_5"></span>
+                        <span class="ripple_span" id="manual_span_6"></span>
+                    </div>
                 </div>
             </div>
             <!-- MANUAL NAVIGATION END -->
