dimension values changed

--- a/flipkart.html
+++ b/flipkart.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="Slicebox-master/css/demo.css">
     <link rel="stylesheet" href="Slicebox-master/css/slicebox.css">
     <script src="Slicebox-master/js/modernizr.custom.46884.js"></script>
-    <link rel="stylesheet" href="css/utils.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <!-- <link rel="stylesheet" href="css/utils.css"> -->
+    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
 <body class="defaultScroll">
@@ -2905,5 +2905,4 @@ Telephone: <span id="telephone">1800 202 9898</span>
     <script src="Slicebox-master/js/jquery.slicebox.js"></script>
     <script src="js/script_1.js"></script>
 </body>
-
 </html>
